# Retrieval-first-document-RAG-system

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  system_design.md
apps/: streamlit_app.py
eval/: evaluate.py  ground_truth.py  retrieval_eval.py  runall.py  test_extraction.py  test_retrieval.py  test_routing.py
eval/checks/: ground_truth.py  runall.py  test_extraction.py  test_retrieval.py  test_routing.py
eval/datasets/: eval_dataset.sample.json  generated_batch_eval.json  generated_eval_dataset.json  golden_set_extraction_eval.json  golden_set_retrieval_golden.json
eval/runners/: evaluate.py  retrieval_eval.py
golden_set/final_metrics/: final_metrics_extraction_eval.json  final_metrics_retrieval_golden.json  generate_final_metrics_dataset.py
scripts/: generate_demo_pdfs.py  ingest_sample.py
src/factory_rag/: __init__.py  answer_service.py  api.py  bom_tables.py  cache.py  chunking.py  classifier.py  cli.py  config.py  document_schema.py  embeddings.py  extraction.py  gemini_client.py  ingestion_service.py  metadata.py  metrics.py  opensearch_store.py  postgres.py  qdrant_store.py  query_service.py  retrieval.py  router.py  runtime.py  storage.py  utils.py
src/factory_rag/core/: config.py  runtime.py
src/factory_rag/processing/: bom_tables.py  chunking.py  classifier.py  document_schema.py  embeddings.py  extraction.py  gemini_client.py  metadata.py  router.py  utils.py
src/factory_rag/services/: query_service.py  (+3 more)
tests/: __init__.py  test_bom_tables.py  test_metadata.py  test_router.py
(+6 files in other folders)
