[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "factory-rag"
version = "0.1.0"
description = "Local-first RAG system for factory documents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.110.0",
    "fpdf2>=2.8.7",
    "num2words>=0.5.14",
    "opensearch-py>=2.4.0",
    "psycopg2-binary>=2.9.9",
    "pymupdf>=1.23.0",
    "python-dotenv>=1.0.0",
    "qdrant-client>=1.9.0",
    "redis>=5.0.0",
    "sentence-transformers>=5.4.0",
    "streamlit>=1.44.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
factory-rag = "factory_rag.cli:main"

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.setuptools.packages.find]
where = ["src"]
